add list server detail
